react-front-end/src/components/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

div.MuiBottomNavigation-root {
  position: fixed;
  bottom: 0;
  width: 100%;
  overflow: hidden;
}

.MuiBottomNavigationAction-root.Mui-selected {
  background-color: #DDD;
}

.notifications {
  position: fixed;
  top: 50px;
  right: 0;
  background-color: #FFF;
  border: 1px solid #DDD;
  width: 20rem;
  border-radius: 10px;
}

.notification {
  font-size: 0.7rem;
  padding: 10px;
}

.notification:hover {
  background-color: #abc7ff;
}

.notifications-title {
  padding: 10px;
}
.notifications-footer {
  height: 10px;
  border-top: 1px solid #DDD;
}

hr {
  border-top: 1px solid #DDD;
}

.notifications a {
  color: #222;
  text-decoration: none;
}

